--- a/src/public/assets/css/login.css
+++ b/src/public/assets/css/login.css
@@ -104,4 +104,20 @@ body {
     color: #0073CC;
 }
 
+.validatin-error__area {
+    display: block;
+    text-decoration: none;
+    width:100%;
+    height:1vw;
+    text-align: left;
+    /* margin-top: 0.5vw;
+    padding-left:1vw; */
+    line-height: 1vw;
+    font-size:1vw;
+    font-weight: bold;
+    background-color:lightpink;
+    color:red;
+  }
+  
+
 
