--- a/src/public/assets/css/attendance-admin-detail.css
+++ b/src/public/assets/css/attendance-admin-detail.css
@@ -188,18 +188,32 @@ body {
     display:none;
 }
 
-.request-stat {
-    width:100%;
-    font-size: 1.19vw;
-    color: #ff0000;
-    text-align: right;
+.approve_btn {
+    width: 100%;
+    padding-left: 70%;
 }
+
+/* 承認済み表示 */
+.request-stat {
+    display:block;
+    height: 3.306vw;
+    width: 12.16vw;
+    background-color: #696969;
+    color: #fff;
+    line-height:3.306vw;
+    font-size: 1.455vw;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 0.5vw;
+}
+
 .detail-form {
     width: 100%;
     height: 3.306vw;
     margin-top: 4vw;
     text-align: right;
 }
+
 .form-btn {
     height: 3.306vw;
     width: 12.16vw;
