--- a/src/public/assets/css/login.css
+++ b/src/public/assets/css/login.css
@@ -48,7 +48,7 @@ body {
 
 .contents-area {
     width: 44.97vw;
-    margin: 0 auto;
+    margin: 0 auto 2vw auto;
     padding-top: 6.6vw;
     text-align: center;
 }
@@ -78,12 +78,12 @@ body {
     height: 2.976vw;
     font-size: 1.058vw;
     border:1px #000 solid;
-    margin-bottom:5vw;
     text-align: left;
 }
 
 .iteme-name-title{
     font-weight: bold;
+    margin-top:3vw;
 }
 
 .item-post-btn {
@@ -95,29 +95,14 @@ body {
     border:1px #000 solid;
     background-color: #000;
     color:#fff;
+    margin-top:4vw;
     margin-bottom: 2.0vw;
     text-align: center;
+
 }
 
 .register-link {
     font-size: 1.322vw;
     color: #0073CC;
 }
-
-.validatin-error__area {
-    display: block;
-    text-decoration: none;
-    width:100%;
-    height:1vw;
-    text-align: left;
-    /* margin-top: 0.5vw;
-    padding-left:1vw; */
-    line-height: 1vw;
-    font-size:1vw;
-    font-weight: bold;
-    background-color:lightpink;
-    color:red;
-  }
-  
-
 
